[workspace]
members = ["eq_ui_build"]

[package]
name = "eq_ui"
version = "0.2.0"
edition = "2024"
description = "Portable Dioxus UI component library - atoms, molecules, organisms + theme"
license = "MIT OR Apache-2.0"
repository = "https://github.com/equidevium/eq_ui"
homepage = "https://github.com/equidevium/eq_ui"
readme = "README.md"
keywords = ["dioxus", "ui", "components", "theme", "tailwind"]
categories = ["gui", "web-programming"]

[dependencies]
dioxus = "=0.7.3"

[build-dependencies]
eq_ui_build = { path = "eq_ui_build" }

[[example]]
name = "playground"
path = "examples/playground.rs"
