[workspace]
members = ["eq_ui_build", "eq_ui_macros"]

[package]
name = "eq_ui"
version = "0.4.0"
edition = "2024"
description = "Portable Dioxus UI component library - atoms, molecules, organisms + theme"
license = "MIT OR Apache-2.0"
repository = "https://github.com/equidevium/eq_ui"
homepage = "https://github.com/equidevium/eq_ui"
readme = "README.md"
keywords = ["dioxus", "ui", "components", "theme", "tailwind"]
categories = ["gui", "web-programming"]

[features]
default = []
playground = []

[dependencies]
dioxus = "=0.7.3"
eq_ui_macros = { path = "eq_ui_macros" }

[build-dependencies]
eq_ui_build = "0.1.0"

[dev-dependencies]
web-sys = { version = "0.3", features = ["Navigator", "Clipboard", "Window"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[[example]]
name = "playground"
path = "examples/playground.rs"
required-features = ["playground"]
