[package]
name = "eq_ui_macros"
version = "0.1.0"
edition = "2024"
description = "Proc macros for eq_ui — #[playground] generation and PlaygroundEnum derive"
license = "MIT OR Apache-2.0"
repository = "https://github.com/equidevium/eq_ui"
homepage = "https://github.com/equidevium/eq_ui"
keywords = ["dioxus", "ui", "macro", "preview", "playground"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
convert_case = "0.7"
